--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "angular-material": "0.10.0",
     "angular-material-icons": "~0.5.0",
     "angular-route": "1.4.3",
-    "angular-translate": "~2.7.2"
+    "angular-translate": "~2.7.2",
+    "font-awesome": "fontawesome#^4.7.0"
   },
   "resolutions": {
     "angular": "1.4.3",
